--- a/style.css
+++ b/style.css
@@ -7,7 +7,33 @@
 }
 button:hover:valid{
     cursor:pointer;
+    background-color: rgb(237, 237, 237);
+}
+button:valid{
+    border: 2px solid black;
+    opacity:1
 }
 button:hover{
     cursor:not-allowed;
+}
+button{
+    background-color: white;
+    border:2px solid grey;
+    opacity:0.5;
+    border-radius: 10px;
+    font-size:20px;
+}
+.download{
+    margin-top:20px;
+}
+.inputSettingDiv{
+    margin-bottom:20px;
+}
+body{
+    background-color: rgb(209, 209, 252);
+}
+.inputText{
+    margin-top:5px;
+    width:100px;
+    text-align:center;
 }
