change body color

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ button {
 }
 
 body {
-  background-color: #eee;
+  background-color: #f9ffe9;
   padding: 1rem;
   display: flex;
   align-items: center;
